kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fullstack-app-pod
spec:
  containers:
  - name: bookmark-app
    image: bookmark-app
    imagePullPolicy: Never
    ports:
    - containerPort: 3838
