kubernetes/pod_to_shell_into.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-shell
spec:
  containers:
  - name: ubuntu
    image: ubuntu:jammy
    command: ["sleep", "infinity"]
# kubectl exec -it ubuntu-shell -- sh
