kubernetes/replicaset_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fullstack-app-svc
  labels:
    app: fullstack-app-svc
spec:
  ports:
    - port: 3838
      targetPort: 3838
  selector:
    app: fullstack-app
